[package]
name = "juliex"
edition = "2018"
version = "0.3.0-alpha.2"
authors = ["Without Boats <boats@mozilla.com>"]
description = "a very basic future executor"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam = "0.6.0"
num_cpus = "1.9.0"
lazy_static = "1.2.0"

[dev-dependencies]
romio = "0.3.0-alpha.2"

[dev-dependencies.futures]
version = "0.3.0-alpha.13"
package = "futures-preview"
